# house_prices_kaggle

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/clean_data/: train_df_preprocessed.csv  train_df_ready.csv
house_prices_kaggle/: main.py  utils.py
house_prices_kaggle/model/: house_prices_prediction.csv  house_prices_regressor.pkl  pipeline.py
house_prices_kaggle/notebooks/: data_preprocessing.ipynb  eda.ipynb  feature_engineering.ipynb  modeling.ipynb
