[tool.poetry]
name = "house-prices-kaggle"
version = "0.1.0"
description = ""
authors = ["Vasilii Tokarev <notsoyunng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
missingno = "^0.5.2"
scikit-learn = "^1.5.2"
dill = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
